redpanda-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: redpanda
  name: redpanda
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redpanda
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/synapse: "true"
        io.kompose.service: redpanda
    spec:
      containers:
        - args:
            - redpanda start
            - --overprovisioned
            - --kafka-addr PLAINTEXT://0.0.0.0:29092,OUTSIDE://0.0.0.0:9092
            - --advertise-kafka-addr PLAINTEXT://redpanda:29092,OUTSIDE://localhost:9092
            - --pandaproxy-addr 0.0.0.0:8082
            - --advertise-pandaproxy-addr localhost:8082
          image: docker.redpanda.com/vectorized/redpanda:v22.2.2
          name: redpanda
          ports:
            - containerPort: 8081
            - containerPort: 8082
            - containerPort: 9092
            - containerPort: 9644
            - containerPort: 29092
          resources: {}
      restartPolicy: Always
status: {}
