apicurio-registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: apicurio-registry
  name: apicurio-registry
spec:
  ports:
    - name: "8090"
      port: 8090
      targetPort: 8080
  selector:
    io.kompose.service: apicurio-registry
status:
  loadBalancer: {}
