console-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: console
  name: console
spec:
  ports:
    - name: "8085"
      port: 8085
      targetPort: 8080
  selector:
    io.kompose.service: console
status:
  loadBalancer: {}
