kafka-ui-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka-ui
  name: kafka-ui
spec:
  ports:
    - name: "8080"
      port: 8080
  selector:
    io.kompose.service: kafka-ui
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka-ui
  name: kafka-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka-ui
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yaml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: kafka-ui
    spec:
      containers:
        - env:
            - name: DYNAMIC_CONFIG_ENABLED
              value: "true"
            - name: KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS
              value: redpanda:29092
            - name: KAFKA_CLUSTERS_0_KAFKACONNECT_0_ADDRESS
              value: http://redpanda:8083
            - name: KAFKA_CLUSTERS_0_KAFKACONNECT_0_NAME
              value: first
            - name: KAFKA_CLUSTERS_0_METRICS_PORT
              value: "9997"
            - name: KAFKA_CLUSTERS_0_NAME
              value: redpanda
            - name: KAFKA_CLUSTERS_0_SCHEMAREGISTRY
              value: http://redpanda:8085
          image: provectuslabs/kafka-ui:latest
          name: kafka-ui
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
