redpanda-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: redpanda
  name: redpanda
spec:
  ports:
    - name: "8083"
      port: 8083
      targetPort: 8081
    - name: "8084"
      port: 8084
      targetPort: 8082
    - name: "9092"
      port: 9092
      targetPort: 9092
    - name: "9644"
      port: 9644
      targetPort: 9644
    - name: "29092"
      port: 29092
      targetPort: 29092
  selector:
    io.kompose.service: redpanda
status:
  loadBalancer: {}
